add skin setting

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
+
+#minimal-mistakes orig setting
+minimal_mistakes_skin: "air"
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
