--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,6 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: 32ba.net
-locale: "ja-JP"
 email: admin@32ba.net
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -22,6 +21,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+repository: 32ba/32ba.net
+locale: "ja-JP"
+lang: ja
 twitter_username: mod_deflate
 github_username:  32ba
 
