--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ twitter_username: mod_deflate
 github_username:  32ba
 
 # Build settings
+encoding: utf-8
 markdown: kramdown
 theme: minimal-mistakes-jekyll
 plugins:
