--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "32ba.net"
 title_separator          : "-"
 name                     : "mitsuba"
 description              : "mitsuba official site."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://32ba.net"
+baseurl                  : 
 repository               : "32ba/32ba.net"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
@@ -105,7 +105,7 @@ author:
   bio              : "I am an amazing person."
   location         : "Somewhere"
   email            : "admin`32ba.net"
-  uri              : 
+  uri              : "32ba.net"
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
   codepen          :
@@ -136,6 +136,7 @@ author:
 include:
   - .htaccess
   - _pages
+  - _posts
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -269,3 +270,10 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: false
